--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.h2.console.enabled=true
 # Custom H2 Console URL
 spring.h2.console.path=/h2-console
 
-spring.security.user.name=user
-spring.security.user.password=password
+#spring.security.user.name=user
+#spring.security.user.password=password
